Remove illegal tag as it's not needed